--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospedando páginas no GitHub</title>
-</head>
-<body>
-    <h1>Bem vindo ao GitHub Pages</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>DevNiverse</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="https://cdn-images-1.medium.com/fit/c/200/200/1*DaAsbyMdVgvruDbfYXTjrA.png" >
+    </head>
+    <body>
+        <div class="container text-center">
+            <div class="header">
+                <img src="https://cdn-images-1.medium.com/fit/c/200/200/1*DaAsbyMdVgvruDbfYXTjrA.png" alt="Logo" class="rounded-circle mt-5">
+                <h1 class="mt-3">DevNiverse</h1>
+                <h3 class="mt-3">Desenvolvimento é sobre inovação e criatividade, não apenas programação</h3>
+                <p class="mt-4">Conheça mais em <a href="https://medium.com/devniverse">DevNiverse</a></p>
+            </div>
+        </div>
+    
+        <footer class="footer fixed-bottom">
+            <div class="container text-center">
+                <p>&copy; DevNiverse, 2024</p>
+            </div>
+        </footer>
+    </body>
 </html>
