feat: criando pagina de sugestao

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <div class="suggestion-section">
             <h5 class="suggestion-title mt-3">Tem curiosidade sobre algum tema específico da tecnologia?</h5>
-            <button class="btn btn-primary btn-sm suggestion-button">Deixe sua sugestão para futuros posts!</button>
+            <a href="./suggestion-page.html" class="suggestion-text btn btn-primary btn-sm suggestion-button">Deixe sua sugestão para futuros posts!</a>
         </div>
 
         <footer class="footer fixed-bottom">
