feat: removendo bloqueio do botao para enviar sugestoes

--- a/suggestion-page.html
+++ b/suggestion-page.html
@@ -52,12 +52,7 @@
             rows="6"
           ></textarea>
         </div>
-        <p class="text-muted mb-2" style="font-style: italic">
-          Esta funcionalidade ainda está sendo implementada.
-        </p>
-        <button type="submit" class="btn btn-primary btn-block" disabled>
-          Enviar
-        </button>
+        <button type="submit" class="btn btn-primary btn-block">Enviar</button>
       </form>
     </main>
 
